Fix the card border not aligned witht the image correctly

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -51,15 +51,25 @@
   display: flex;
   position: relative;
   z-index: 99;
-  top: 24px;
-  left: 26px;
   width: 16px;
 }
-.card__trash-img {
+.card__trash-lid {
   border: none;
   background: transparent;
   display: flex;
   position: absolute;
+  top: 18px;
+  left: 249px;
+  width: 16px;
+}
+
+.card__trash-bin {
+  border: none;
+  background: transparent;
+  display: flex;
+  position: absolute;
+  top: 23px;
+  left: 249px;
   width: 16px;
 }
 
